apps/base/netbootxyz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: netbootxyz
  labels:
    app.kubernetes.io/name: netbootxyz
    app.kubernetes.io/instance: netbootxyz
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  - name: assets
    port: 80
    targetPort: assets
    protocol: TCP
  selector:
    app.kubernetes.io/name: netbootxyz
    app.kubernetes.io/instance: netbootxyz
