apps/base/netbootxyz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbootxyz
  namespace: netbootxyz
spec:
  ingressClassName: traefik
  rules:
    - host: netbootxyz.localho.st
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netbootxyz
              port:
                name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbootxyz-assets
  namespace: netbootxyz
spec:
  ingressClassName: traefik
  rules:
    - host: netboot.localho.st
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netbootxyz
              port:
                name: assets
