apps/base/netbootxyz/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-route
  namespace: netbootxyz
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - netbootxyz.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbootxyz
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-assets-route
  namespace: netbootxyz
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - netboot.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbootxyz
          port: 80
